src/lib/schwa/formats/html_gen.cc

#line 1 "../ragel/formats/html/main.rl"
// vim: ft=ragel:
/* -*- Mode: C++; indent-tabs-mode: nil -*- */


#line 15 "../ragel/formats/html/main.rl"


#include <schwa/formats/html.h>
#include <iostream>

namespace schwa {
namespace formats {


#line 18 "schwa/formats/html_gen.cc"
static const int html_start = 320;

static const int html_en_try_recover = 319;
static const int html_en_main = 320;


#line 24 "../ragel/formats/html/main.rl"

bool
HTMLLexer::_run(const uint8_t *const input, const size_t nbytes) {
  (void)html_en_main;  // Shoosh compiler warning about unused variable.
  (void)html_en_try_recover;  // Shoosh compiler warning about unused variable.
  const uint8_t *p = input, *pe = p + nbytes, *eof = pe;
  int cs;

  
#line 35 "schwa/formats/html_gen.cc"
	{
	cs = html_start;
	}

#line 33 "../ragel/formats/html/main.rl"

  _begin_document();
  
#line 44 "schwa/formats/html_gen.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
st320:
	if ( ++p == pe )
		goto _test_eof320;
case 320:
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr631;
		case 60u: goto tr632;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr633;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr635;
	} else
		goto tr634;
	goto tr630;
tr0:
#line 9 "../ragel/formats/html/main.rl"
	{
    p--; {goto st319;}
  }
	goto st0;
#line 80 "schwa/formats/html_gen.cc"
st0:
cs = 0;
	goto _out;
tr630:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr636:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr647:
#line 9 "../ragel/formats/html/html.rl"
	{ _decimal_character_reference_end(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr702:
#line 11 "../ragel/formats/html/html.rl"
	{ _hex_character_reference_end(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr704:
#line 13 "../ragel/formats/html/html.rl"
	{ _named_character_reference_end(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr648:
#line 20 "../ragel/formats/html/html.rl"
	{ _comment_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr654:
#line 22 "../ragel/formats/html/html.rl"
	{ _doctype_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr660:
#line 18 "../ragel/formats/html/html.rl"
	{ _cdata_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr666:
#line 30 "../ragel/formats/html/html.rl"
	{ _close_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
tr672:
#line 25 "../ragel/formats/html/html.rl"
	{ _open_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st321;
st321:
	if ( ++p == pe )
		goto _test_eof321;
case 321:
#line 152 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr637;
		case 60u: goto tr638;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr639;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr641;
	} else
		goto tr640;
	goto tr636;
tr631:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
tr637:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
tr649:
#line 20 "../ragel/formats/html/html.rl"
	{ _comment_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
tr655:
#line 22 "../ragel/formats/html/html.rl"
	{ _doctype_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
tr661:
#line 18 "../ragel/formats/html/html.rl"
	{ _cdata_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
tr667:
#line 30 "../ragel/formats/html/html.rl"
	{ _close_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
tr673:
#line 25 "../ragel/formats/html/html.rl"
	{ _open_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st322;
st322:
	if ( ++p == pe )
		goto _test_eof322;
case 322:
#line 217 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 35u: goto tr642;
		case 38u: goto tr637;
		case 60u: goto tr638;
	}
	if ( (*p) < 91u ) {
		if ( (*p) < 48u ) {
			if ( 1u <= (*p) && (*p) <= 47u )
				goto tr636;
		} else if ( (*p) > 57u ) {
			if ( (*p) > 64u ) {
				if ( 65u <= (*p) && (*p) <= 90u )
					goto tr643;
			} else if ( (*p) >= 58u )
				goto tr636;
		} else
			goto tr643;
	} else if ( (*p) > 96u ) {
		if ( (*p) < 192u ) {
			if ( (*p) > 122u ) {
				if ( 123u <= (*p) && (*p) <= 127u )
					goto tr636;
			} else if ( (*p) >= 97u )
				goto tr643;
		} else if ( (*p) > 223u ) {
			if ( (*p) > 239u ) {
				if ( 240u <= (*p) && (*p) <= 247u )
					goto tr641;
			} else if ( (*p) >= 224u )
				goto tr640;
		} else
			goto tr639;
	} else
		goto tr636;
	goto tr0;
tr642:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st323;
st323:
	if ( ++p == pe )
		goto _test_eof323;
case 323:
#line 263 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr637;
		case 60u: goto tr638;
		case 88u: goto tr645;
		case 120u: goto tr645;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 57u ) {
			if ( 128u <= (*p) && (*p) <= 191u )
				goto tr0;
		} else if ( (*p) >= 48u )
			goto tr644;
	} else if ( (*p) > 223u ) {
		if ( (*p) < 240u ) {
			if ( 224u <= (*p) && (*p) <= 239u )
				goto tr640;
		} else if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else
			goto tr641;
	} else
		goto tr639;
	goto tr636;
tr646:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st324;
tr644:
#line 8 "../ragel/formats/html/html.rl"
	{ _decimal_character_reference_start(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st324;
st324:
	if ( ++p == pe )
		goto _test_eof324;
case 324:
#line 307 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr637;
		case 59u: goto tr647;
		case 60u: goto tr638;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 57u ) {
			if ( 128u <= (*p) && (*p) <= 191u )
				goto tr0;
		} else if ( (*p) >= 48u )
			goto tr646;
	} else if ( (*p) > 223u ) {
		if ( (*p) < 240u ) {
			if ( 224u <= (*p) && (*p) <= 239u )
				goto tr640;
		} else if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else
			goto tr641;
	} else
		goto tr639;
	goto tr636;
tr632:
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
tr638:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
tr650:
#line 20 "../ragel/formats/html/html.rl"
	{ _comment_end(p); }
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
tr656:
#line 22 "../ragel/formats/html/html.rl"
	{ _doctype_end(p); }
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
tr662:
#line 18 "../ragel/formats/html/html.rl"
	{ _cdata_end(p); }
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
tr668:
#line 30 "../ragel/formats/html/html.rl"
	{ _close_tag_end(p); }
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
tr674:
#line 25 "../ragel/formats/html/html.rl"
	{ _open_tag_end(p); }
#line 19 "../ragel/formats/html/html.rl"
	{ _comment_start(p); }
#line 17 "../ragel/formats/html/html.rl"
	{ _cdata_start(p); }
#line 21 "../ragel/formats/html/html.rl"
	{ _doctype_start(p); }
#line 29 "../ragel/formats/html/html.rl"
	{ _close_tag_start(p); }
#line 24 "../ragel/formats/html/html.rl"
	{ _open_tag_start(p); }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 432 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 33u: goto st2;
		case 37u: goto st46;
		case 47u: goto st48;
		case 63u: goto st90;
		case 83u: goto tr6;
		case 84u: goto tr7;
		case 115u: goto tr6;
		case 116u: goto tr7;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 58u )
			goto tr4;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr4;
	} else
		goto tr4;
	goto tr0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 45u: goto st3;
		case 68u: goto st20;
		case 91u: goto st27;
		case 100u: goto st20;
	}
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 45u )
		goto st4;
	goto tr0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr13;
		case 45u: goto tr14;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr15;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr17;
	} else
		goto tr16;
	goto tr12;
tr12:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st5;
tr18:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st5;
tr37:
#line 9 "../ragel/formats/html/html.rl"
	{ _decimal_character_reference_end(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st5;
tr40:
#line 11 "../ragel/formats/html/html.rl"
	{ _hex_character_reference_end(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st5;
tr42:
#line 13 "../ragel/formats/html/html.rl"
	{ _named_character_reference_end(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 532 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr20;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr21;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr23;
	} else
		goto tr22;
	goto tr18;
tr13:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st6;
tr19:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 567 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 35u: goto tr24;
		case 38u: goto tr19;
		case 45u: goto tr20;
	}
	if ( (*p) < 91u ) {
		if ( (*p) < 48u ) {
			if ( 1u <= (*p) && (*p) <= 47u )
				goto tr18;
		} else if ( (*p) > 57u ) {
			if ( (*p) > 64u ) {
				if ( 65u <= (*p) && (*p) <= 90u )
					goto tr25;
			} else if ( (*p) >= 58u )
				goto tr18;
		} else
			goto tr25;
	} else if ( (*p) > 96u ) {
		if ( (*p) < 192u ) {
			if ( (*p) > 122u ) {
				if ( 123u <= (*p) && (*p) <= 127u )
					goto tr18;
			} else if ( (*p) >= 97u )
				goto tr25;
		} else if ( (*p) > 223u ) {
			if ( (*p) > 239u ) {
				if ( 240u <= (*p) && (*p) <= 247u )
					goto tr23;
			} else if ( (*p) >= 224u )
				goto tr22;
		} else
			goto tr21;
	} else
		goto tr18;
	goto tr0;
tr24:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 613 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr20;
		case 88u: goto tr27;
		case 120u: goto tr27;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 57u ) {
			if ( 128u <= (*p) && (*p) <= 191u )
				goto tr0;
		} else if ( (*p) >= 48u )
			goto tr26;
	} else if ( (*p) > 223u ) {
		if ( (*p) < 240u ) {
			if ( 224u <= (*p) && (*p) <= 239u )
				goto tr22;
		} else if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else
			goto tr23;
	} else
		goto tr21;
	goto tr18;
tr14:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st8;
tr20:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 653 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr28;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr21;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr23;
	} else
		goto tr22;
	goto tr18;
tr28:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 684 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr28;
		case 62u: goto st325;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr21;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr23;
	} else
		goto tr22;
	goto tr18;
st325:
	if ( ++p == pe )
		goto _test_eof325;
case 325:
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr649;
		case 60u: goto tr650;
	}
	if ( (*p) < 224u ) {
		if ( (*p) > 191u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr651;
		} else if ( (*p) >= 128u )
			goto tr0;
	} else if ( (*p) > 239u ) {
		if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else if ( (*p) >= 240u )
			goto tr653;
	} else
		goto tr652;
	goto tr648;
tr633:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
tr639:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
tr651:
#line 20 "../ragel/formats/html/html.rl"
	{ _comment_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
tr657:
#line 22 "../ragel/formats/html/html.rl"
	{ _doctype_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
tr663:
#line 18 "../ragel/formats/html/html.rl"
	{ _cdata_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
tr669:
#line 30 "../ragel/formats/html/html.rl"
	{ _close_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
tr675:
#line 25 "../ragel/formats/html/html.rl"
	{ _open_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 774 "schwa/formats/html_gen.cc"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st321;
	goto tr0;
tr634:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
tr640:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
tr652:
#line 20 "../ragel/formats/html/html.rl"
	{ _comment_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
tr658:
#line 22 "../ragel/formats/html/html.rl"
	{ _doctype_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
tr664:
#line 18 "../ragel/formats/html/html.rl"
	{ _cdata_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
tr670:
#line 30 "../ragel/formats/html/html.rl"
	{ _close_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
tr676:
#line 25 "../ragel/formats/html/html.rl"
	{ _open_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 822 "schwa/formats/html_gen.cc"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st10;
	goto tr0;
tr635:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
tr641:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
tr653:
#line 20 "../ragel/formats/html/html.rl"
	{ _comment_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
tr659:
#line 22 "../ragel/formats/html/html.rl"
	{ _doctype_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
tr665:
#line 18 "../ragel/formats/html/html.rl"
	{ _cdata_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
tr671:
#line 30 "../ragel/formats/html/html.rl"
	{ _close_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
tr677:
#line 25 "../ragel/formats/html/html.rl"
	{ _open_tag_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 870 "schwa/formats/html_gen.cc"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st11;
	goto tr0;
tr15:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st13;
tr21:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 888 "schwa/formats/html_gen.cc"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st5;
	goto tr0;
tr16:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st14;
tr22:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 906 "schwa/formats/html_gen.cc"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st13;
	goto tr0;
tr17:
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st15;
tr23:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 924 "schwa/formats/html_gen.cc"
	if ( 128u <= (*p) && (*p) <= 191u )
		goto st14;
	goto tr0;
tr36:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st16;
tr26:
#line 8 "../ragel/formats/html/html.rl"
	{ _decimal_character_reference_start(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 946 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr20;
		case 59u: goto tr37;
	}
	if ( (*p) < 192u ) {
		if ( (*p) > 57u ) {
			if ( 128u <= (*p) && (*p) <= 191u )
				goto tr0;
		} else if ( (*p) >= 48u )
			goto tr36;
	} else if ( (*p) > 223u ) {
		if ( (*p) < 240u ) {
			if ( 224u <= (*p) && (*p) <= 239u )
				goto tr22;
		} else if ( (*p) > 247u ) {
			if ( 248u <= (*p) )
				goto tr0;
		} else
			goto tr23;
	} else
		goto tr21;
	goto tr18;
tr27:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 981 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr20;
	}
	if ( (*p) < 128u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto tr38;
		} else if ( (*p) > 70u ) {
			if ( 97u <= (*p) && (*p) <= 102u )
				goto tr38;
		} else
			goto tr38;
	} else if ( (*p) > 191u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr21;
		} else if ( (*p) > 239u ) {
			if ( (*p) > 247u ) {
				if ( 248u <= (*p) )
					goto tr0;
			} else if ( (*p) >= 240u )
				goto tr23;
		} else
			goto tr22;
	} else
		goto tr0;
	goto tr18;
tr39:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st18;
tr38:
#line 10 "../ragel/formats/html/html.rl"
	{ _hex_character_reference_start(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 1029 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 0u: goto tr0;
		case 38u: goto tr19;
		case 45u: goto tr20;
		case 59u: goto tr40;
	}
	if ( (*p) < 128u ) {
		if ( (*p) < 65u ) {
			if ( 48u <= (*p) && (*p) <= 57u )
				goto tr39;
		} else if ( (*p) > 70u ) {
			if ( 97u <= (*p) && (*p) <= 102u )
				goto tr39;
		} else
			goto tr39;
	} else if ( (*p) > 191u ) {
		if ( (*p) < 224u ) {
			if ( 192u <= (*p) && (*p) <= 223u )
				goto tr21;
		} else if ( (*p) > 239u ) {
			if ( (*p) > 247u ) {
				if ( 248u <= (*p) )
					goto tr0;
			} else if ( (*p) >= 240u )
				goto tr23;
		} else
			goto tr22;
	} else
		goto tr0;
	goto tr18;
tr41:
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st19;
tr25:
#line 12 "../ragel/formats/html/html.rl"
	{ _named_character_reference_start(p); }
#line 15 "../ragel/formats/html/html.rl"
	{ _text_character_end(p); }
#line 14 "../ragel/formats/html/html.rl"
	{ _text_character_start(p); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 1078 "schwa/formats/html_gen.cc"
	switch( (*p) ) {
		case 38u: goto tr19;
		case 45u: goto tr20;
		case 59u: goto tr42;
	}
	if ( (*p) < 91u ) {
		if ( (*p) < 48u ) {
